# wbs-sync-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DEVELOPMENT_PLAN.md
langflow_custom/: README.md  file_component_default.py  read_from_filename.py  read_via_partname.py
src/wbs_sync/: __init__.py  __main__.py  change_detector.py  changelog.py  config.py  langflow_client.py  models.py  naming.py  pipeline.py  scheduler.py  state.py  transformer.py  wbs_client.py
tests/: conftest.py  test_change_detector.py  test_changelog.py  test_langflow_client.py  test_naming.py  test_pipeline.py  test_state.py  test_transformer.py  test_wbs_client.py
