[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wbs-sync-service"
version = "0.1.0"
description = "Sync WBS work codes to LangFlow, pushing only when data changes."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "APScheduler>=3.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
